FIX: project spacing

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -177,7 +177,7 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 2rem;
-    max-width: 900px;
+    max-width: none;
     text-align: center;
 }
 
